--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "dependencies": {
     "express": "^4.16.2",
     "express-session": "^1.15.6",
-    "mongoose": "^4.12.3",
+    "mongoose": "^4.12.4",
     "passport": "^0.4.0",
-    "passport-github": "^1.1.0"
+    "passport-github2": "^0.1.11",
+    "passport-twitter": "^1.0.4",
+    "passport-facebook": "^2.1.1"
   },
-  "main": "/server/server.js",
   "scripts": {
     "start": "node server.js"
   },
